--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -71,34 +72,34 @@
                     </div>
                 </div>
             </section>
-            <section class="featured-section">
+            <section id="featured" class="featured-section">
                 <div class="featured-section__title">Featured Plants</div>
                 <div class="featured-section__card card">
-                    <div class="card__produkt">
+                    <a href="#popup_1" class="card__produkt">
                         <div class="card__flower"><img src="./img/flowers/flower_1.jpg" alt="Kaktus Plants"></div>
                         <div class="card__title">Kaktus Plants</div>
                         <div class="card__price">IDR 85.000</div>
-                    </div>
-                    <div class="card__produkt">
+                    </a>
+                    <a href="#popup_2" class="card__produkt">
                         <div class="card__flower"><img src="./img/flowers/flower_2.jpg" alt="Landak Plants"></div>
                         <div class="card__title">Landak Plants</div>
                         <div class="card__price">IDR 105.000</div>
-                    </div>
-                    <div class="card__produkt">
+                    </a>
+                    <a href="#popup_3" class="card__produkt">
                         <div class="card__flower"><img src="./img/flowers/flower_3.jpg" alt="Kecubung Plants"></div>
                         <div class="card__title">Kecubung Plants</div>
                         <div class="card__price">IDR 85.000</div>
-                    </div>
-                    <div class="card__produkt">
+                    </a>
+                    <a href="#popup_4" class="card__produkt">
                         <div class="card__flower"><img src="./img/flowers/flower_4.jpg" alt="Kecubung Plants"></div>
                         <div class="card__title">Kecubung Plants</div>
                         <div class="card__price">IDR 85.000</div>
-                    </div>
-                    <div class="card__produkt">
+                    </a>
+                    <a href="#popup_5" class="card__produkt">
                         <div class="card__flower"><img src="./img/flowers/flower_5.jpg" alt="Kecubung Plants"></div>
                         <div class="card__title">Kecubung Plants</div>
                         <div class="card__price">IDR 85.000</div>
-                    </div>
+                    </a>
                 </div>
             </section>
             <section class="shop-section">
@@ -112,6 +113,116 @@
                     <img src="./img/flowers/flower-shop.png" alt="shop flower">
                 </div>
             </section>
+        </div>
+    </div>
+    <div id="popup_1" class="popup">
+        <a href="#featured" class="popup__area"></a>
+        <div class="popup__card">
+            <div class="popup__content">
+                <a href="#featured" class="popup__close">
+                    <span class="material-symbols-outlined">disabled_by_default</span>
+                </a>
+                <div class="popup__img">
+                    <img src="./img/flowers/flower_1.jpg" alt="popup flower">
+                </div>
+                <div class="popup__desc">
+                    <div class="popup__desc _title">Kaktus Plants</div>
+                    <div class="popup__desc _text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa distinctio, iusto, aliquam, perspiciatis dolore alias consectetur pariatur dolores quos mollitia iste molestiae a? Quam suscipit cupiditate ea fugit, quod quaerat
+                    </div>
+                    <div class="popup__link">
+                        <a href="#" class="btn btn_shop">Buy now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="popup_2" class="popup">
+        <a href="#featured" class="popup__area"></a>
+        <div class="popup__card">
+            <div class="popup__content">
+                <a href="#featured" class="popup__close">
+                    <span class="material-symbols-outlined">disabled_by_default</span>
+                </a>
+                <div class="popup__img">
+                    <img src="./img/flowers/flower_2.jpg" alt="popup flower">
+                </div>
+                <div class="popup__desc">
+                    <div class="popup__desc _title">Kaktus Plants</div>
+                    <div class="popup__desc _text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa distinctio, iusto, aliquam, perspiciatis dolore alias consectetur pariatur dolores quos mollitia iste molestiae a? Quam suscipit cupiditate ea fugit, quod quaerat
+                    </div>
+                    <div class="popup__link">
+                        <a href="#" class="btn btn_shop">Buy now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="popup_3" class="popup">
+        <a href="#featured" class="popup__area"></a>
+        <div class="popup__card">
+            <div class="popup__content">
+                <a href="#featured" class="popup__close">
+                    <span class="material-symbols-outlined">disabled_by_default</span>
+                </a>
+                <div class="popup__img">
+                    <img src="./img/flowers/flower_3.jpg" alt="popup flower">
+                </div>
+                <div class="popup__desc">
+                    <div class="popup__desc _title">Kaktus Plants</div>
+                    <div class="popup__desc _text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa distinctio, iusto, aliquam, perspiciatis dolore alias consectetur pariatur dolores quos mollitia iste molestiae a? Quam suscipit cupiditate ea fugit, quod quaerat
+                    </div>
+                    <div class="popup__link">
+                        <a href="#" class="btn btn_shop">Buy now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="popup_4" class="popup">
+        <a href="#featured" class="popup__area"></a>
+        <div class="popup__card">
+            <div class="popup__content">
+                <a href="#featured" class="popup__close">
+                    <span class="material-symbols-outlined">disabled_by_default</span>
+                </a>
+                <div class="popup__img">
+                    <img src="./img/flowers/flower_4.jpg" alt="popup flower">
+                </div>
+                <div class="popup__desc">
+                    <div class="popup__desc _title">Kaktus Plants</div>
+                    <div class="popup__desc _text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa distinctio, iusto, aliquam, perspiciatis dolore alias consectetur pariatur dolores quos mollitia iste molestiae a? Quam suscipit cupiditate ea fugit, quod quaerat
+                    </div>
+                    <div class="popup__link">
+                        <a href="#" class="btn btn_shop">Buy now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="popup_5" class="popup">
+        <a href="#featured" class="popup__area"></a>
+        <div class="popup__card">
+            <div class="popup__content">
+                <a href="#featured" class="popup__close">
+                    <span class="material-symbols-outlined">disabled_by_default</span>
+                </a>
+                <div class="popup__img">
+                    <img src="./img/flowers/flower_5.jpg" alt="popup flower">
+                </div>
+                <div class="popup__desc">
+                    <div class="popup__desc _title">Kaktus Plants</div>
+                    <div class="popup__desc _text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa distinctio, iusto, aliquam, perspiciatis dolore alias consectetur pariatur dolores quos mollitia iste molestiae a? Quam suscipit cupiditate ea fugit, quod quaerat
+                    </div>
+                    <div class="popup__link">
+                        <a href="#" class="btn btn_shop">Buy now</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
