--- a/index.html
+++ b/index.html
@@ -75,27 +75,27 @@
             <section id="featured" class="featured-section">
                 <div class="featured-section__title">Featured Plants</div>
                 <div class="featured-section__card card">
-                    <a href="#popup_1" class="card__produkt">
+                    <a href="#popup_1" class="card__product">
                         <div class="card__flower"><img src="./img/flowers/flower_1.jpg" alt="Kaktus Plants"></div>
                         <div class="card__title">Kaktus Plants</div>
                         <div class="card__price">IDR 85.000</div>
                     </a>
-                    <a href="#popup_2" class="card__produkt">
+                    <a href="#popup_2" class="card__product">
                         <div class="card__flower"><img src="./img/flowers/flower_2.jpg" alt="Landak Plants"></div>
                         <div class="card__title">Landak Plants</div>
                         <div class="card__price">IDR 105.000</div>
                     </a>
-                    <a href="#popup_3" class="card__produkt">
+                    <a href="#popup_3" class="card__product">
                         <div class="card__flower"><img src="./img/flowers/flower_3.jpg" alt="Kecubung Plants"></div>
                         <div class="card__title">Kecubung Plants</div>
                         <div class="card__price">IDR 85.000</div>
                     </a>
-                    <a href="#popup_4" class="card__produkt">
+                    <a href="#popup_4" class="card__product">
                         <div class="card__flower"><img src="./img/flowers/flower_4.jpg" alt="Kecubung Plants"></div>
                         <div class="card__title">Kecubung Plants</div>
                         <div class="card__price">IDR 85.000</div>
                     </a>
-                    <a href="#popup_5" class="card__produkt">
+                    <a href="#popup_5" class="card__product">
                         <div class="card__flower"><img src="./img/flowers/flower_5.jpg" alt="Kecubung Plants"></div>
                         <div class="card__title">Kecubung Plants</div>
                         <div class="card__price">IDR 85.000</div>
